# FractalBitmapGenerator

./: .gitignore  CMakeLists.txt  README.md
include/: Bitmap.h  FractalCreator.h  Mandelbrot.h  RGB.h
src/: Bitmap.cpp  CMakeLists.txt  FractalCreator.cpp  Mandelbrot.cpp  RGB.cpp  ZoomList.cpp  main.cpp
src/include/: BitmapFileHeader.h  BitmapInfoHeader.h  Zoom.h  ZoomList.h
